Turma 6/Infra 2/Aula 8 [Terraform]/main.tf
data "aws_availability_zones" "available" {}

provider "aws" {
    region = "sa-east-1"
}


module "vpc" {
source = "terraform-aws-modules/vpc/aws"
name = "${var.namespace}-vpc"
cidr = "10.0.0.0/16"
azs = data.aws_availability_zones.available.names
private_subnets = ["10.0.1.0/24", "10.0.2.0/24"]
public_subnets = ["10.0.101.0/24", "10.0.102.0/24"]
create_database_subnet_group = true
enable_nat_gateway = true
single_nat_gateway = true
}

resource "aws_security_group" "allow_ssh_pub" {
name = "${var.namespace}-allow_ssh"
description = "Allow SSH inbound traffic"
vpc_id = module.vpc.vpc_id

ingress {
description = "SSH from the internet"
from_port = 22
to_port = 22
protocol = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}

egress {
from_port = 0
to_port = 0
protocol = "-1"
cidr_blocks = ["0.0.0.0/0"]
}

tags = {
Name = "${var.namespace}-allow_ssh_pub"
}
}

resource "aws_security_group" "allow_ssh_priv" {
name = "${var.namespace}-allow_ssh_priv"
description = "Allow SSH inbound traffic"
vpc_id = module.vpc.vpc_id

ingress {
description = "SSH only from internal VPC clients"
from_port = 22
to_port = 22
protocol = "tcp"
cidr_blocks = ["10.0.0.0/16"]
}

egress {
from_port = 0
to_port = 0
protocol = "-1"
cidr_blocks = ["0.0.0.0/0"]
}

tags = {
Name = "${var.namespace}-allow_ssh_priv"
}
}
